# 1.3-engine

./: .gitignore  CMakeLists.txt  LICENSE  LightweightVK_Documentation.md  README.md  setup.sh
.cache/clangd/index/: BaseImporter.h.E81C0C2F1AD5B613.idx  BaseProcess.h.BC48DEBDE2BDD265.idx  BaseTypes.h.3711EA92AA6450A2.idx  Common.h.EDA720F2251D2252.idx  ConstantUnion.h.64ACBB56CF6165C6.idx  DefaultIOStream.h.8FEE7F17B7238253.idx  DefaultLogger.hpp.8C309AC49456EEFC.idx  Exceptional.h.BB8A6B1C2C42983E.idx  FBXCompileConfig.h.52BC2E3A533575F6.idx  FBXDeformer.cpp.C17FC5ADDA1FCBEB.idx  FBXDocument.h.6611E9EC29DA7B46.idx  FBXDocumentUtil.h.E673C70CCD816718.idx  FBXImportSettings.h.5594C67DB09A85DF.idx  FBXImporter.h.31E4C00F16F564CB.idx  FBXMeshGeometry.h.525F17E4B2E557F8.idx  FBXParser.h.DE416AACBB10A694.idx  FBXProperties.h.FD816825C840B2C2.idx  FBXTokenizer.h.37B428C53C7B1914.idx  FixNormalsStep.cpp.CD3D9E427EFD53A7.idx  FixNormalsStep.h.C718C25D3C1A96B0.idx  GenBoundingBoxesProcess.cpp.408E52E5DEA1F837.idx  GenBoundingBoxesProcess.h.CCE22A4B41FA30E8.idx  GenericProperty.h.12C5154DDA22F78A.idx  Hash.h.52D071B42C28D8DD.idx  IOStream.hpp.3C65299915959BEA.idx  Importer.hpp.490FF302580E1A4B.idx  InfoSink.h.9B1874B59F43B35A.idx  LogAux.h.7489FA66F7070D0C.idx  LogStream.hpp.2F1DEF4E83F1A7F7.idx  Logger.hpp.7E1F77D019AB03A5.idx  MathFunctions.h.3D761FD46351A8D4.idx  NullLogger.hpp.B984A7BC1ADC6189.idx  ParseHelper.h.8AD48B92F74CF9A8.idx  PoolAlloc.h.6C616ACB408EC780.idx  PpAtom.cpp.7298FB42FA929E6F.idx  PpContext.h.F8BAA23F357C4972.idx  PpScanner.cpp.97E0EB1A3958FAA4.idx  PpTokens.h.7E721D3E5D7B1DC4.idx  ProgressHandler.hpp.A81F4A2CEA41BEF2.idx  RemoveVCProcess.cpp.AD8B3CE4B3400C1F.idx  (+125 more)
assets/scenes/: default.yml
cmake/: Shaders.cmake
scripts/: build.sh  clean.sh  copy_headers.py  run.sh
shaders/: CRT-dynamic.frag  Posterization.frag  basic.frag  basic.vert  blinn_phong.frag  blinn_phong.vert  bloom.frag  dithering.frag  dream.frag  fog.frag  glitch.frag  nopost.frag  pixelation.frag  post.vert  underwater.frag
src/: Camera.cpp  Camera.h  gltf_loader.cpp  gltf_loader.h  main.cpp
src/components/: Actor.cpp  Actor.h  BaseComponent.h  CameraComponent.cpp  CameraComponent.h  MeshComponent.cpp  MeshComponent.h  TransformComponent.cpp  TransformComponent.h
